Fixed white space issue

--- a/scss/application.css
+++ b/scss/application.css
@@ -13,6 +13,7 @@
   }
   body {
     display: block;
+    margin: 0;
   }
 }
 @media (min-width: 576px) {
@@ -21,11 +22,15 @@
   }
   body {
     display: block;
+    margin-left: -200px;
   }
 }
 @media (min-width: 768px) {
   .hidden-md {
     display: none;
+  }
+  body {
+    margin: 0;
   }
   .nav {
     display: grid;
@@ -38,6 +43,9 @@
   .hidden-lg {
     display: none;
   }
+  body {
+    margin: 0;
+  }
   .nav {
     display: grid;
   }
@@ -45,6 +53,9 @@
 @media (min-width: 1200px) {
   .hidden-xl {
     display: none;
+  }
+  body {
+    margin: 0;
   }
   .nav {
     display: grid;
@@ -210,7 +221,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
 }
 
 header {
