--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -8,7 +8,6 @@ body {
     font-size: $base__font-size;
     line-height: calc($base__line / $base__font-size);
     font-family: $font-family--primary;
-    margin: 0;
 }
 
 header {
